#1 chore : Place List Test API URL fix

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ KAKAO_CLIENT_KEY=
 KAKAO_CLIENT_SECRET=
 NEXT_PUBLIC_KAKAO_APP_JS_KEY=
 NEXT_PUBLIC_API_SERVER_MAIN_URL=
+NEXT_PUBLIC_API_INTERNAL_URL=
