#5 feat : Route.js as typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-, "app/api/auth/[...nextauth]/route.js", "lib/fetch.ts"  ],
+, "app/api/auth/[...nextauth]/route.ts", "lib/fetch.ts"  ],
   "exclude": ["node_modules"]
 }
